--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -300,7 +300,7 @@
   "Footer.goToFacebook": "Go to Facebook page",
   "Footer.goToInstagram": "Go to Instagram page",
   "Footer.goToTwitter": "Go to Twitter page",
-  "Footer.organizationDescription": "The largest online community to rent saunas in Finland.",
+  "Footer.organizationDescription": "The largest online community to consult with doctor in India.",
   "Footer.privacy": "Privacy",
   "Footer.privacyPolicy": "Privacy policy",
   "Footer.searchAhvenanmaa": "Ahvenanmaa",
@@ -391,7 +391,7 @@
   "LoadableComponentErrorBoundaryPage.description": "It looks like the app needs to be updated! Please, refresh the current page or go back to {link}.",
   "LoadableComponentErrorBoundaryPage.landingPageLink": "landing page",
   "LocationAutocompleteInput.currentLocation": "Current location",
-  "LocationSearchForm.placeholder": "Search saunas…",
+  "LocationSearchForm.placeholder": "Search your Doctor…",
   "LoginForm.emailInvalid": "A valid email address is required",
   "LoginForm.emailLabel": "Email",
   "LoginForm.emailPlaceholder": "john.doe@example.com",
@@ -755,9 +755,9 @@
   "SearchPage.searchError": "Search failed. Please try again.",
   "SearchResultsPanel.nextPage": "Next page",
   "SearchResultsPanel.previousPage": "Previous page",
-  "SectionHero.browseButton": "Browse saunas",
-  "SectionHero.subTitle": "The largest online community to rent saunas in Finland.",
-  "SectionHero.title": "Book saunas everywhere.",
+  "SectionHero.browseButton": "Browse Doctors",
+  "SectionHero.subTitle": "The largest online community to consult with doctor in India.",
+  "SectionHero.title": "Consult Doctors anytime .",
   "SectionHowItWorks.createListingLink": "PS. You can also become a Saunatime host in just a few clicks!",
   "SectionHowItWorks.part1Text": "Start by searching for a location. Once you find a sauna you like, simply check the availability, book it, and make a secure payment right away.",
   "SectionHowItWorks.part1Title": "1. Browse and book",
@@ -768,7 +768,7 @@
   "SectionHowItWorks.titleLineOne": "The sauna ritual",
   "SectionHowItWorks.titleLineTwo": "(or how Saunatime works).",
   "SectionLocations.listingsInLocation": "Saunas in {location}",
-  "SectionLocations.title": "Explore exotic locations in Finland",
+  "SectionLocations.title": "Explore best Doctors in India",
   "SelectMultipleFilter.labelSelected": "{labelText} • {count}",
   "SelectMultipleFilterPlainForm.labelSelected": "{labelText} • {count}",
   "SelectSingleFilter.popupClear": "Clear",
@@ -983,7 +983,7 @@
   "Topbar.mobileSearchHelp": "Tip: You can also search saunas by zip code, for example \"00500\" or city district – \"Sörnäinen\".",
   "Topbar.searchIcon": "Open search",
   "TopbarDesktop.accountSettingsLink": "Account settings",
-  "TopbarDesktop.createListing": "+ Add your sauna",
+  "TopbarDesktop.createListing": "+ Register as a Doctor ",
   "TopbarDesktop.inbox": "Inbox",
   "TopbarDesktop.login": "Log in",
   "TopbarDesktop.logo": "Saunatime",
@@ -1002,7 +1002,7 @@
   "TopbarMobileMenu.signupOrLogin": "{signup} or {login}",
   "TopbarMobileMenu.unauthorizedGreeting": "Hello there,{lineBreak}would you like to {signupOrLogin}?",
   "TopbarMobileMenu.yourListingsLink": "Your listings",
-  "TopbarSearchForm.placeholder": "Search saunas…",
+  "TopbarSearchForm.placeholder": "Search your Doctor…",
   "TopbarSearchForm.searchHelp": "Tip: You can also search saunas by zip code, for example \"00500\" or city district \"Sörnäinen\".",
   "TransactionPage.deletedListing": "deleted listing",
   "TransactionPage.fetchOrderFailed": "Fetching order data failed.",
